[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/assets/input/scripts/popup_scripts/EmoteButton.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="EmoteButton" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -536.0
rect_min_size = Vector2( 64, 64 )
script = ExtResource( 1 )

[node name="EmoteSprite" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.294118 )
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 57.0
custom_styles/panel = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_EmoteButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EmoteButton_mouse_exited"]
